# dlg-filelister

./: CMakeLists.txt  README.md  filelister.h  main.cpp
